remove clausu, add toddi

--- a/_home_sections/40_band.html
+++ b/_home_sections/40_band.html
@@ -22,11 +22,11 @@ nav_title: Info
 			<p>(Gesang / Ukulele / Percussion)</p>
 		</div>
 
-		<div class="member left clausu for-small">
-			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1512243248/claus_u_ildsus.png"
-				alt="Claus Ulrich - Portrait">
-			<h4>Claus Ulrich</h4>
-			<p>(Bass / Gesang)</p>
+		<div class="member left toddi for-small">
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1545162124/toddi_sqkvjq.png"
+				alt="Toddi Böckmann - Portrait">
+			<h4>Toddi Böckmann</h4>
+			<p>(e-Gitarre)</p>
 		</div>
 
 		<div class="member right soeren for-small">
@@ -68,11 +68,11 @@ nav_title: Info
 			Die Setliste hat es in sich, folgt sie doch nur einer einzigen Leitlinie: HOUSE ON A HILLs Lieblingssongs.
 		</p>
 
-		<div class="member left clausu">
-			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1512243248/claus_u_ildsus.png"
-			 alt="Claus Ulrich - Portrait">
-			<h4>Claus Ulrich</h4>
-			<p>(Bass / Gesang)</p>
+		<div class="member left toddi">
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1545162124/toddi_sqkvjq.png"
+			 alt="Toddi Böckmann - Portrait">
+			<h4>Toddi Böckmann</h4>
+			<p>(e-Gitarre)</p>
 		</div>
 		
 
