make sören play bass

--- a/_home_sections/40_band.html
+++ b/_home_sections/40_band.html
@@ -33,7 +33,7 @@ nav_title: Info
 			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1512243248/soeren_qrko1l.png"
 				alt="Sören Böhme - Portrait">
 			<h4>Sören Böhme</h4>
-			<p>(Cajón / Schlagzeug / Gesang)</p>
+			<p>(Bass / Gesang)</p>
 		</div>
 
 		<div class="member left rene for-small">
@@ -88,7 +88,7 @@ nav_title: Info
 			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1512243248/soeren_qrko1l.png"
 				alt="Sören Böhme - Portrait">
 			<h4>Sören Böhme</h4>
-			<p>(Cajón / Schlagzeug / Gesang)</p>
+			<p>(Bass / Gesang)</p>
 		</div>
 
 		<h4>Zwei Dinge seien nicht unerwähnt zu lassen:</h4>
