feat: update band texts

--- a/_home_sections/40_band.html
+++ b/_home_sections/40_band.html
@@ -44,7 +44,7 @@ nav_title: Info
 		</div>
 		
 		<p>
-			Das seit 2011 unter dem Namen HOUSE ON A HILL bestehende Hamburger Trio, spielt akkustischen Blues, Folk, Americana und
+			Das seit 2011 unter dem Namen HOUSE ON A HILL bestehende Hamburger Quartet/Quintet, spielt akkustischen Blues, Folk, Americana und
 			Soultitel – immer zu Herzen, oder in die Beine gehend...oder beides.
 		</p>
 		
@@ -100,9 +100,7 @@ nav_title: Info
 		</p>
 		<p>
 			2. HOUSE ON A HILL gibt es auch als große, vollelektrische Soulband.
-			<br /> Dann heißt sie HOUSE ON A HILL & THE FABULOUS FREECLIMBERS und erweitert sich um Holger Lechterbeck (Orgel) und Sören
-			Böhme (e-Bass). Auch hatten sich die FRECLIMBERS auch schon ein paarmal einen Bläsersatz gegönnt…alles eine Platz- und
-			Kostenfrage.
+			<br /> Dann heißt sie HOUSE ON A HILL & THE FABULOUS FREECLIMBERS und erweitert sich um Holger Lechterbeck (Orgel). Auch hatten sich die FRECLIMBERS schon ein paarmal einen Bläsersatz gegönnt …alles eine Platz- und Kostenfrage.
 		</p>
 
 		<div class="member left rene">
