--- a/_home_sections/40_band.html
+++ b/_home_sections/40_band.html
@@ -36,12 +36,20 @@ nav_title: Info
 			<p>(Bass / Gesang)</p>
 		</div>
 
-		<div class="member left rene for-small">
+		<div class="member left hannes for-small">
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_hannes_s8oesu.png"
+				alt="Hannes Diercks - Portrait">
+			<h4>Hannes Diercks a.k.a. <a href="https://hannesdiem.de">Hannes Diem</a></h4>
+			<p style="line-height: 1.1em"><small>(Cajón / Gesang – lebt in seinem Van an Europas Surfstränden und ist darum nicht so oft dabei.)</small></p>
+		</div>
+
+		<div class="member right rene for-small">
 			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png"
 			 alt="René Raue - Portrait">
 			<h4>René Raue</h4>
 			<p style="line-height: 1.1em"><small>(war bis zu seinem Tod im August 2018 unser Gitarrist. Wir vermissen ihn sehr)</small></p>
 		</div>
+
 		
 		<p>
 			Das seit 2011 unter dem Namen HOUSE ON A HILL bestehende Hamburger Quartet/Quintet, spielt akkustischen Blues, Folk, Americana und
@@ -108,6 +116,13 @@ nav_title: Info
 				alt="René Raue - Portrait">
 			<h4>René Raue</h4>
 			<p style="line-height: 1.1em"><small>(war bis zu seinem Tod im August 2018 unser Gitarrist. Wir vermissen ihn sehr)</small></p>
+		</div>
+		
+		<div class="member right hannes">
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_hannes_s8oesu.png"
+				alt="Hannes Diercks - Portrait">
+			<h4>Hannes Diercks a.k.a. <a href="https://hannesdiem.de">Hannes Diem</a></h4>
+			<p style="line-height: 1.1em"><small>(Cajón / Gesang – lebt in seinem Van an Europas Surfstränden und ist darum nicht so oft dabei.)</small></p>
 		</div>
 
 		<br class="clear">
