feat: add werkstatt video

--- a/_home_sections/21_yellow_moon_of_memphis_video.html
+++ b/_home_sections/21_yellow_moon_of_memphis_video.html
@@ -12,6 +12,7 @@ hide_nav: false
   </p>
 
 	<p style="overflow: hidden;">
+		<iframe class="yt-video cd" src="https://www.youtube-nocookie.com/embed/d_175PxsdfA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		<iframe class="yt-video cd" src="https://www.youtube-nocookie.com/embed/YZFtcg2iR-U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		<iframe class="yt-video cd" src="https://www.youtube-nocookie.com/embed/EFMol2OKfqI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	</p>
