--- a/_home_sections/40_band.html
+++ b/_home_sections/40_band.html
@@ -26,7 +26,7 @@ nav_title: Info
 			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1545162124/toddi_sqkvjq.png"
 				alt="Toddi Böckmann - Portrait">
 			<h4>Toddi Böckmann</h4>
-			<p>(e-Gitarre)</p>
+			<p>(E-Gitarre)</p>
 		</div>
 
 		<div class="member right soeren for-small">
@@ -36,21 +36,27 @@ nav_title: Info
 			<p>(Bass / Gesang)</p>
 		</div>
 
-		<div class="member left hannes for-small">
+		<div class="member left yogi for-small">
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1545162124/v1668766614/jogi_ke9uyr.png"
+			 alt="Yogi Jockusch - Portrait">
+			<h4>Yogi Jockusch</h4>
+			<p>(Percussion)</p>
+		</div>
+
+		<div class="member right hannes for-small">
 			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_hannes_s8oesu.png"
 				alt="Hannes Diercks - Portrait">
 			<h4>Hannes Diercks a.k.a. <a href="https://hannesdiem.de">Hannes Diem</a></h4>
 			<p style="line-height: 1.1em"><small>(Cajón / Gesang – lebt in seinem Van an Europas Surfstränden und ist darum nicht so oft dabei.)</small></p>
 		</div>
 
-		<div class="member right rene for-small">
+		<div class="member left rene for-small">
 			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png"
 			 alt="René Raue - Portrait">
 			<h4>René Raue</h4>
 			<p style="line-height: 1.1em"><small>(war bis zu seinem Tod im August 2018 unser Gitarrist. Wir vermissen ihn sehr)</small></p>
 		</div>
 
-		
 		<p>
 			Das seit 2011 unter dem Namen HOUSE ON A HILL bestehende Hamburger Quartet/Quintet, spielt akkustischen Blues, Folk, Americana und
 			Soultitel – immer zu Herzen, oder in die Beine gehend...oder beides.
@@ -80,7 +86,7 @@ nav_title: Info
 			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1545162124/toddi_sqkvjq.png"
 			 alt="Toddi Böckmann - Portrait">
 			<h4>Toddi Böckmann</h4>
-			<p>(e-Gitarre)</p>
+			<p>(E-Gitarre)</p>
 		</div>
 		
 
@@ -106,6 +112,14 @@ nav_title: Info
 			und für normale und unnormale Verrücktheiten. Und zwar unter <a href="mailto:info@houseonahill.de">info@houseonahill.de</a>, oder über facebook-Nachricht.
 			Und weil wir so scharf aufs Spielen sind, wird immer SOFORT geantwortet.
 		</p>
+
+		<div class="member left yogi">
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1545162124/v1668766614/jogi_ke9uyr.png"
+			 alt="Yogi Jockusch - Portrait">
+			<h4>Yogi Jockusch</h4>
+			<p>(Percussion)</p>
+		</div>
+		
 		<p>
 			2. HOUSE ON A HILL gibt es auch als große, vollelektrische Soulband.
 			<br /> Dann heißt sie HOUSE ON A HILL & THE FABULOUS FREECLIMBERS und erweitert sich um Holger Lechterbeck (Orgel). Auch hatten sich die FRECLIMBERS schon ein paarmal einen Bläsersatz gegönnt …alles eine Platz- und Kostenfrage.
@@ -117,7 +131,7 @@ nav_title: Info
 			<h4>René Raue</h4>
 			<p style="line-height: 1.1em"><small>(war bis zu seinem Tod im August 2018 unser Gitarrist. Wir vermissen ihn sehr)</small></p>
 		</div>
-		
+
 		<div class="member right hannes">
 			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_hannes_s8oesu.png"
 				alt="Hannes Diercks - Portrait">
